Provide working example of messaging/broadcasting/presence

--- a/Examples/PresenceExample/wwwroot/index.html
+++ b/Examples/PresenceExample/wwwroot/index.html
@@ -27,7 +27,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="/tailwind.config.js"></script>
-    <script src="/app.js"></script>
+    <script src="/JSInterop.js"></script>
 </body>
 
 </html>
