--- a/Examples/PresenceExample/wwwroot/index.html
+++ b/Examples/PresenceExample/wwwroot/index.html
@@ -11,19 +11,13 @@
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 </head>
 
-<body class="bg-white dark:bg-neutral-900 text-black dark:text-white">
+<body class="bg-neutral-900 text-white">
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
         </svg>
         <div class="loading-progress-text"></div>
-    </div>
-
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="/tailwind.config.js"></script>
