--- a/Examples/PresenceExample/wwwroot/index.html
+++ b/Examples/PresenceExample/wwwroot/index.html
@@ -22,6 +22,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="/tailwind.config.js"></script>
     <script src="/JSInterop.js"></script>
+    <script defer data-domain="multiplayer-csharp.azurewebsites.net" src="https://ping.acupofjose.com/js/plausible.js"></script>
 </body>
 
 </html>
